--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,8 @@
     <string name="backup_button">备份</string>
     <string name="success_backup_prompt">备份成功</string>
     <string name="victory">胜利</string>
+    <string name="match_duration_default">06:59</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
